--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@types/node": "^16.11.29",
     "@types/react": "^18.0.7",
     "@types/react-dom": "^18.0.0",
+    "@types/react-router-dom": "^5.3.3",
     "firebase": "^9.6.11",
     "firebase-tools": "^10.7.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-redux": "^8.0.1",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "reactfire": "^4.2.1",
     "typescript": "^4.6.3",
