--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
     "@types/react": "^18.0.7",
     "@types/react-dom": "^18.0.0",
     "@types/react-router-dom": "^5.3.3",
+    "emailjs-com": "^3.2.0",
     "firebase": "^9.6.11",
-    "firebase-tools": "^10.7.1",
+    "firebase-tools": "^10.9.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-redux": "^8.0.1",
