--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "react-app",
   "version": "0.1.0",
+  "description": "",
   "private": true,
+  "author": "",
+  "license": "ISC",
   "dependencies": {
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
