--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "private": true,
   "author": "",
   "license": "ISC",
+  "jest": {
+    "verbose": true
+  },
   "dependencies": {
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
@@ -26,8 +29,10 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-redux": "^8.0.1",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
     "reactfire": "^4.2.1",
     "typescript": "^4.6.3",
     "web-vitals": "^2.1.4"
@@ -57,6 +62,9 @@
     ]
   },
   "devDependencies": {
-    "@types/react-redux": "^7.1.24"
+    "@types/react-redux": "^7.1.24",
+    "@types/react-slick": "^0.23.9",
+    "eslint": "^8.18.0",
+    "eslint-config-react-app": "^7.0.1"
   }
 }
