--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
     "reactfire": "^4.2.1",
+    "slick-carousel": "^1.8.1",
     "typescript": "^4.6.3",
     "web-vitals": "^2.1.4"
   },
