リファクタリング07/24

--- a/.firebaserc
+++ b/.firebaserc
@@ -1,5 +1,17 @@
 {
   "projects": {
-    "default": "recipe-d58ba"
+    "default": "chiacchiere-71c24s"
+  },
+  "targets": {
+    "chiacchiere-71c24": {
+      "hosting": {
+        "develope": [
+          "chiacchiere-71c24s"
+        ],
+        "product": [
+          "chiacchiere-recipe"
+        ]
+      }
+    }
   }
 }
